# rg-2-midi

./: .gitignore  CMakeLists.txt  README.md
cmake/: generic.cmake
src/: AllocateChannels.cpp  AllocateChannels.h  AnalysisTypes.h  AudioLevel.cpp  AudioSegmentMapper.cpp  BaseProperties.cpp  BaseProperties.h  BasicQuantizer.cpp  CMakeLists.txt  ChannelInterval.cpp  ChannelInterval.h  ChannelManager.cpp  ChannelManager.h  Clipboard.h  Colour.h  Composition.cpp  Composition.h  CompositionMapper.cpp  CompositionMapper.h  CompositionTimeSliceAdapter.h  ConfigGroups.h  Configuration.h  ControlBlock.cpp  ControlBlock.h  ControlParameter.cpp  ControlParameter.h  ControllerContext.cpp  ControllerContext.h  ControllerEventAdapter.cpp  Device.cpp  DocumentGet.cpp  ElementAdapter.h  Event.cpp  Event.h  Exception.cpp  Exception.h  ExternalTransport.h  FastVector.h  GzipFile.cpp  GzipFile.h  (+90 more)
